<resources>
    <string name="app_name">TrailMix</string>
    <string name="title_activity_maps">Map</string>
    <string name="text">How long is your trip?</string>
    <string name="minute">minute(s)</string>
    <string name="button">Start!</string>
    <string name="maps">Choose Location</string>
    <string name="manuel">Enter Time</string>
    <string name="textView">Your playlist has finished.</string>
    <string name="back">Back to the home screen</string>
    <string name="time">Time</string>
    <string name="skip">Skip Song</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Are you sure you want to cancel?</string>
    <string name="confirm">Yes</string>
    <string name="nonconfirm">No</string>
    <string name="load">Loading...</string>
    <string name="Question">Please Input Your Destination</string>
    <string name="street">Street Name</string>
    <string name="num">Building Number</string>
    <string name="state">State (Abbreviated)</string>
    <string name="go">Go!</string>
    <string name="template">Find your address using an address template</string>


</resources>
